<resources>
    <string name="app_name">Formulario:</string>
    <string name="user">Usuario:</string>
    <string name="password">Password:</string>
    <string name="repetirpassword">Repetir:</string>
    <string name="correo">Email:</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="fecha">Fecha Nacimiento:</string>
    <string name="lugar">Lugar Nacimiento:</string>
    <string name="aceptar">Aceptar</string>
    <string name="informacion">Informacion</string>
    <string name="correr">Correr</string>
    <string name="saltar">Saltar</string>
    <string name="trotar">Trotar</string>
    <string name="caminar">Camina</string>
    <string name="actividad">Actividad Fisica Preferida:</string>
    <string name="genero">Genero:</string>
    <string name="ddmmaaaa">ddmmaaa</string>

    <string-array name="ciudades">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Pereira</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena de Indias</item>
        <item>Soledad</item>
        <item>Cúcuta</item>
        <item>Ibagué</item>
        <item>Soacha</item>
        <item>Bucaramanga</item>
        <item>Santa Marta</item>
        <item>Villavicencio</item>
        <item>Bello</item>
        <item>Valledupar</item>
        <item>Pereira</item>
        <item>Buenaventura</item>
        <item>Pasto</item>
        <item>Manizales</item>
        <item>Montería</item>
        <item>Neiva</item>
        <item>Itagui</item>

    </string-array>

</resources>
